# techtrend

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
api/repositories/: warehouse.py
api/routers/: analytics.py  products.py
api/schemas/: models.py
api/static/: index.html
dags/: ingest_daily.py  lake_medallion.py  ml_training.py  platform_monitoring.py  warehouse_build.py
data/samples/: kaggle_facts.csv  kaggle_products.csv  kaggle_time.csv
dbt/techtrend_dw/: dbt_project.yml
dbt/techtrend_dw/macros/: unique_grain_product_day.sql
dbt/techtrend_dw/profiles/: .user.yml  profiles.yml
dbt/techtrend_dw/snapshots/: snap_products.sql
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/mlflow/: Dockerfile
docker/postgres/: 20_airflow_db.sh
docs/: architecture.md  cloud-deployment.md  data-dictionary.md
docs/adr/: ADR-001-dual-warehouse-target.md  ADR-002-no-message-queue.md  ADR-003-pandera-over-great-expectations.md  ADR-004-real-amazon-catalog.md
docs/screenshots/: README.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: platform_health.json
scripts/: build_real_catalog.py  seed_demo.py  simulate_price_history.py
src/techtrend/: __init__.py  pipeline.py
src/techtrend/common/: lake_io.py  logging.py
src/techtrend/config/: settings.py
tests/: conftest.py
tests/api/: test_endpoints.py
tests/unit/: test_conform.py  test_ingestion.py  test_ml.py  test_quality.py
(+30 files in other folders)
