[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "techtrend"
version = "1.0.0"
description = "Enterprise e-commerce lakehouse: price intelligence, demand forecasting, market analytics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "polars>=1.0",
    "pandera[polars]>=0.20",
    "duckdb>=1.0",
    "dbt-duckdb>=1.8",
    "httpx>=0.27",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]
ml = ["lightgbm>=4.3", "mlflow>=2.14"]
postgres = ["dbt-postgres>=1.8", "psycopg2-binary>=2.9"]
airflow = ["apache-airflow>=2.9"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/techtrend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
